--- a/Views/Home/Users.cshtml
+++ b/Views/Home/Users.cshtml
@@ -26,9 +26,9 @@
 									<td>@u.address @u.city, @u.state @u.zip</td>
 									<td>@u.phone</td>
 									<td>
-                                        <a href="" class="btn btn-round btn-info">Profile</a>
-                                        <a href="" class="btn btn-round btn-warning">Edit</a>
-                                        <a href="" class="btn btn-round btn-danger">Delete</a>
+                                        <a href="UserProfile/@u.user_id" class="btn btn-round btn-info">Profile</a>
+                                        <a href="EditUser/@u.user_id" class="btn btn-round btn-warning">Edit</a>
+                                        <a href="DeleteUser/@u.user_id" class="btn btn-round btn-danger">Delete</a>
                                     </td>
 								</tr>   
                             }
