--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,6 +22,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       @if(ViewBag.user != null)
+       {
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -67,7 +69,21 @@
             <a class="dropdown-item" asp-action="MessageBoard" asp-controller="Home">Message Board</a>
           </div>
         </li>
-       <li class="nav-item dropdown pull-right">
+      </ul>
+       }
+       else
+       {
+         <ul class="navbar-nav">
+           <li class="nav-item">
+             <a class="nav-link" asp-action="Login" asp-controller="Home">Login</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" asp-action="Register" asp-controller="Home">Register</a>
+           </li>
+         </ul>
+       }
+       <ul class="navbar-nav ml-auto">
+         <li class="nav-item dropdown pull-right">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Cart
           </a>
@@ -76,7 +92,7 @@
             <a class="dropdown-item" asp-action="Checkout" asp-controller="Home">Checkout</a>
           </div>
         </li>
-      </ul>
+       </ul>
     </div>
   </div>
 </nav>
